<resources>
    <string name="app_name">CS4084-FinalProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Welcome Activity string values -->
    <string name="welcome_message"> Welcome to Laughs!</string>
    <string name="viewer_discretion"> *Warning*: This app may contain offensive language and jokes, you may continue at your own risk.</string>
    <string name="termsOfUse"> Before continuing, you need to agree to our terms of use:</string>
    <string name="tos_point1">  1. I agree that I consent to view jokes/memes and I will not be offended.</string>
    <string name="tos_point2">  2. In the case I do get offended by something, I agree that this was warned to me beforehand and hence I cannot take action against the developers.</string>
    <string name="tos_point3"> 3. I agree that I will enjoy the memes and jokes and will not take anything too seriously!</string>
    <string name="agreement"> I agree to the terms of use as provided to me.</string>
    <string name="user_DidNot_agreeToTOS"> Please note: You cannot proceed unless you agree to our terms of use.</string>
    <string name="continue_button">Continue</string>
    <string name="notify">notify</string>
    <string name="options">options</string>
    <string name="share">Share</string>
    <string name="test">TEST</string>
    <string name="textview">TextView</string>
    <string name="like">Like</string>
    <string name="saved_jokes">Saved Jokes</string>
    <string name="todo">TODO</string>
    <string name="upload">Upload</string>
    <string name="meme">Meme</string>
    <string name="jokes">Jokes</string>
    <string name="saved_memes">Saved Memes</string>
    <string name="memes">Memes</string>
    <string name="refresh">Refresh</string>
    <string name="laughs">Laughs</string>
    <string name="fab">Fab</string>

    <string name="notifications">notifications</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Settings activity string values -->
    <string name="settings"> Settings </string>
    <string name="switch_darkMode"> Enable dark mode </string>
    <string name="notifications_preference"> Notifications </string>
    <string name="app_version"> App Version: 1.0</string>
    <string name="about_the_devs"> About us</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="back_button">Back to Laughs!</string>
    <!-- About us string values-->
    <string name="aboutUs">About us</string>
    <string name="aboutusContent">We are 4 passionate students in the module CS4084 who decided to develop a fun enjoyable app which targets people who just want to have a laugh!</string>
    <string name="group_Members"> Here are the group members: </string>
    <string name="vivian"> Vivian Jently, Student ID 22079017</string>
    <string name="michal"> Michal Kornacki Student ID 22361979</string>
    <string name="Oscar"> Oscar Zhou Student ID 22338705</string>
    <string name="lorcan"> Lorcan Hyland Student ID 21340609</string>
    <string name="back_To_settings">Back</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>