<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Us_Activity"
    android:background="@drawable/about_us_background">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="152dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/robo_slab_bold"
        android:text="@string/aboutUs"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="398dp"
        android:layout_height="114dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/robo_slab_bold"
        android:text="@string/aboutusContent"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="381dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robo_slab_bold"
        android:text="@string/group_Members"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="381dp"
        android:layout_height="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/vivian"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/robo_slab_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="381dp"
        android:layout_height="32dp"
        android:layout_marginTop="27dp"
        android:text="@string/Oscar"
        android:textColor="@color/white"
        android:fontFamily="@font/robo_slab_bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="381dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/michal"
        android:textColor="@color/white"
        android:fontFamily="@font/robo_slab_bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="381dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/lorcan"
        android:textColor="@color/white"
        android:fontFamily="@font/robo_slab_bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/button4"
        android:layout_width="114dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:text="@string/back_To_settings"
        android:onClick="back_to_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

</androidx.constraintlayout.widget.ConstraintLayout>