<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/initial_background"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="41sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Dark Mode Switch -->

    <!-- Notifications Switch -->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch2"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:onClick="darkMode"
        android:text="@string/switch_darkMode"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch3"
        android:layout_width="347dp"
        android:layout_height="63dp"
        android:text="@string/notifications_preference"
        android:textColor="@color/white"
        android:checked="true"
        android:onClick="cancelNotification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch2"
        app:layout_constraintVertical_bias="0.148" />

    <!-- Clear Cache Button -->

    <!-- About the Developers Button -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="190dp"
        android:layout_height="74dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="@color/red"
        android:onClick="clearCache"
        android:text="@string/clear_cache"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="192dp"
        android:layout_height="70dp"
        android:onClick="openAboutPage"
        android:text="@string/about_the_devs"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch3"
        app:layout_constraintVertical_bias="0.603" />

    <!-- Back Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="181dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/orange"
        android:onClick="backToLaughs"
        android:text="@string/back_button"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintVertical_bias="0.66" />

</androidx.constraintlayout.widget.ConstraintLayout>
